--- a/baseline_trials/AttentionCheckPage.html
+++ b/baseline_trials/AttentionCheckPage.html
@@ -229,7 +229,7 @@
                        font-size: 1rem;
                        border-radius: 0.25rem;
                        padding: 4px 12px;" type="button" id="submit-button">
-            Next
+            {{ button_next }}
         </button>
     </div>
 
@@ -238,11 +238,7 @@
 <!--    {{ include_sibling 'Reminder.html' }}-->
 
 
-
-
 </form>
-
-
 
 
 </body>
