--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -4,7 +4,7 @@
     Block 1
 </div>
 
-<p style="text-align: center; font-size: 26px;  "> Decision {{player.round_number}} </p>
+<p style="text-align: center; font-size: 26px;  "> {{ button_decision }} {{player.round_number}} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
     <label>
@@ -480,7 +480,7 @@
 
     <div class="button-container">
         <button type="button" id="submit-button" class="submit-button">
-            Next
+            {{ button_next }}
         </button>
     </div>
 
