--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-    <p style="text-align: center; font-size: 26px;  "> Bonus points </p>
+    <p style="text-align: center; font-size: 26px;  "> {{ intro_title }} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
     <label>
