--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -4,7 +4,7 @@
     Block 1
 </div>
 
-<p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> Decision {{player.round_number}} </p>
+<p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> {{ button_decision }} {{player.round_number}} </p>
 
 <div style="display: flex; justify-content: center">
     <label>
@@ -931,7 +931,7 @@
 
     <div class="button-container">
         <button type="button" id="submit-button" class="submit-button">
-            Next
+            {{ button_next }}
         </button>
     </div>
 
