--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -1,10 +1,10 @@
 {{ block title }}
 
 <div class="block-header">
-    Block 2
+    {{ button_block|safe }} 2
 </div>
 
-<p style="text-align: center; font-size: 26px;  "> Decision {{ participant.decision_page_number }} </p>
+<p style="text-align: center; font-size: 26px;  "> {{ button_decision|safe }} {{ participant.decision_page_number }} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
     <label>
