--- a/pref_2PP_3PP/Pref_2PP_3PP.html
+++ b/pref_2PP_3PP/Pref_2PP_3PP.html
@@ -1,10 +1,10 @@
 {{ block title }}
 
 <div class="block-header">
-    Block 2
+    {{ button_block|safe }} 2
 </div>
 
-<p style="text-align: center; font-size: 26px;  "> {{ button_decision }}{{ participant.decision_page_number }} </p>
+<p style="text-align: center; font-size: 26px;  "> {{ button_decision }} {{ participant.decision_page_number }} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
     <label>
@@ -31,11 +31,13 @@
 
     /////////// global variables
 
+    var error3 = "{{ error3 }}";
+
     /// Function for showing customized error messages
     const errorDiv = document.querySelector('.otree-form-errors');
 
     if (errorDiv) {
-        errorDiv.textContent = 'Please make a decision to continue.'
+        errorDiv.textContent = error3
     }
 
 
@@ -126,18 +128,21 @@
     }
 
     .option {
-        width: 200px; /* Width scales with viewport width */
-        height: 25px; /* Height scales with viewport width */
+        width: 270px; /* Width scales with viewport width */
+        height: 70px; /* Height scales with viewport width */
+        flex-direction: column;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 12px; /* Font size scales with viewport width */
+        font-size: 16px; /* Font size scales with viewport width */
         background-color: #e0e0e0;
         border: 1.5px solid #000000;
         border-radius: 6px; /* Slightly rounded corners */
         cursor: pointer;
         font-family: Arial, Helvetica, sans-serif;
         transition: background-color 0.3s ease;
+        white-space: normal;
+        word-break: break-word;
     }
 
     .option:hover {
@@ -267,7 +272,7 @@
                     <b class="label label-person-b-2pp">{{ person_b }}</b>
                 </div>
 
-                <p class="or-label"><u>OR</u></p>
+                <p class="or-label"><u>{{ or_button }}</u></p>
 
                 <div class="image-box">
                     <img id="T3PP-image" src="{% static image3PP %}" alt="Coins" class="T3PP-img" />
