--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -1,10 +1,10 @@
 {{ block title }}
 
 <div class="block-header">
-    Block 2
+    {{ button_block|safe }} 2
 </div>
 
-<p style="text-align: center; font-size: 26px;  "> Decision {{ participant.decision_page_number }} </p>
+<p style="text-align: center; font-size: 26px;  "> {{ button_decision|safe }} {{ participant.decision_page_number }} </p>
 
 <div style="display: flex; justify-content: center; margin-bottom: 4px;">
     <label>
@@ -314,12 +314,12 @@
         <!-- Error message -->
         <div id="error-message" style="display: none; color: red; text-align: center; margin-top: 10px;">
             <p>
-                Please move all sliders before continuing.
+                {{ error_all_sliders|safe }}
             </p>
         </div>
 
         <div style="display: flex; justify-content: flex-end">
-            <button class="btn btn-primary">Next</button>
+            <button class="btn btn-primary">{{ button_next|safe }}</button>
         </div>
 
 
