--- a/demographics/Ladder.html
+++ b/demographics/Ladder.html
@@ -117,22 +117,23 @@
 
     .ladder-label {
         position: absolute;
-        width: 120px;
+        width: 140px;
         font-size: 12px;
-        text-align: right;
         color: #333;
         font-style: italic;
         line-height: 1.2;
     }
 
     .top-label {
-        left:calc(50% - 45px);
-        top: 20px; /* adjust to align with bottom rung */
+        text-align: right;
+        left:calc(50% - 60px);
+        top: 25px; /* adjust to align with bottom rung */
     }
 
     .bottom-label {
-        left:calc(50% - 105px);
-        bottom: 23px; /* adjust to align with bottom rung */
+        text-align: left;
+        left:calc(50% - 80px);
+        bottom: 18px; /* adjust to align with bottom rung */
     }
 
 </style>
