--- a/baseline_trials/Instructions.html
+++ b/baseline_trials/Instructions.html
@@ -37,7 +37,7 @@
 
 <div style="display: flex; justify-content: center">
     <label>
-        <progress value="{{ participant.progress }}" max="{{ C.total_pages }}">
+        <progress value="{{ participant.progress }}" max="{{ total_pages }}">
         </progress>
     </label>
 </div>
